k8s-manifests/angular-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: cloudminds.jfrog.io/cloud2025/frontend-a900001:2.8
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: cloudminds-secret
---
apiVersion: v1
kind: Service
metadata:
  name: angular-app
spec:
  type: ClusterIP
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
