k8s-manifests/fmts-nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmts-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fmts-nodejs
  template:
    metadata:
      labels:
        app: fmts-nodejs
    spec:
      containers:
      - name: fmts-nodejs
        image: cloudminds.jfrog.io/cloud2025/fmts-a900001:1.3
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: cloudminds-secret
---
apiVersion: v1
kind: Service
metadata:
  name: fmts-nodejs
spec:
  type: ClusterIP
  selector:
    app: fmts-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
