k8s-manifests/mid-nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mid-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mid-nodejs
  template:
    metadata:
      labels:
        app: mid-nodejs
    spec:
      containers:
      - name: mid-nodejs
        image: cloudminds.jfrog.io/cloud2025/midtier-a900001:2.9
        ports:
        - containerPort: 4000
      imagePullSecrets:
        - name: cloudminds-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mid-nodejs
spec:
  type: ClusterIP
  selector:
    app: mid-nodejs
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
