k8s-manifests/spring-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: cloudminds.jfrog.io/cloud2025/backend-a900001:2.8
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: cloudminds-secret
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
